--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,9 @@
   <title>Chat público · Herramientas FECCOOEx</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- FOOTER CENTRALIZADO -->
+  <link rel="stylesheet" href="/assets/footer.css" />
+
   <style>
     * { box-sizing: border-box; }
 
@@ -27,6 +30,7 @@
       position:sticky;
       top:0;
       z-index:10;
+      gap:16px;
     }
     header img{ height:52px; }
 
@@ -48,6 +52,7 @@
       border:1px solid rgba(255,255,255,0.7);
       border-radius:999px;
       transition:0.2s ease;
+      white-space:nowrap;
     }
     nav a:hover{
       background:rgba(255,255,255,0.18);
@@ -55,26 +60,146 @@
       box-shadow:0 2px 6px rgba(0,0,0,0.25);
     }
 
+    /* VOLVER (unificado) */
+    .back-wrap{
+      max-width:980px;
+      margin:14px auto 0;
+      padding:0 16px;
+    }
+    .back-home{
+      display:inline-block;
+      background:#d60000;
+      color:#fff;
+      text-decoration:none;
+      font-weight:800;
+      padding:8px 12px;
+      border-radius:999px;
+      box-shadow:0 2px 5px rgba(214,0,0,0,0.25);
+      transition: background 0.15s, transform 0.12s ease, box-shadow 0.12s ease;
+      border:1px solid rgba(255,255,255,0.35);
+      font-size:.9rem;
+    }
+    .back-home:hover{
+      background:#b40000;
+      transform:translateY(-1px);
+      box-shadow:0 4px 9px rgba(180,0,0,0.30);
+    }
+
+    /* ===== CARRUSEL (universal) ===== */
+    .campaign-wrap{
+      max-width:980px;
+      margin:12px auto 0;
+      padding:0 16px;
+    }
+
+    .carousel{
+      background:#fff;
+      border:1px solid #e1e4ea;
+      border-radius:12px;
+      box-shadow:0 3px 8px rgba(0,0,0,0.08);
+      overflow:hidden;
+      position:relative;
+    }
+
+    .carousel-track{
+      display:flex;
+      transition:transform 350ms ease;
+      will-change: transform;
+    }
+
+    .slide{
+      min-width:100%;
+      position:relative;
+      background:#fff;
+    }
+
+    .slide a{
+      display:block;
+      text-decoration:none;
+      color:inherit;
+    }
+
+    .slide img{
+      display:block;
+      width:100%;
+      height:auto;
+      object-fit:contain;
+      max-height:260px;
+      background:#fff;
+    }
+
+    @media (max-width:700px){
+      .slide img{ max-height:180px; }
+    }
+
+    .carousel-btn{
+      position:absolute;
+      top:50%;
+      transform:translateY(-50%);
+      border:none;
+      background:rgba(0,0,0,0.35);
+      color:#fff;
+      width:40px;
+      height:40px;
+      border-radius:999px;
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      transition:background 120ms ease, transform 120ms ease;
+      z-index:2;
+    }
+    .carousel-btn:hover{
+      background:rgba(0,0,0,0.5);
+      transform:translateY(-50%) scale(1.03);
+    }
+    .carousel-btn.prev{ left:10px; }
+    .carousel-btn.next{ right:10px; }
+
+    @media (max-width:700px){
+      .carousel-btn{ width:36px; height:36px; }
+      .carousel-btn.prev{ left:8px; }
+      .carousel-btn.next{ right:8px; }
+    }
+
+    .dots{
+      position:absolute;
+      left:0;
+      right:0;
+      bottom:10px;
+      display:flex;
+      justify-content:center;
+      gap:8px;
+      z-index:2;
+      padding:0 10px;
+    }
+    .dot{
+      width:10px;
+      height:10px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,0.9);
+      background:rgba(0,0,0,0.35);
+      cursor:pointer;
+      transition:transform 120ms ease, background 120ms ease;
+    }
+    .dot.active{
+      background:#d60000;
+      border-color:rgba(255,255,255,0.95);
+      transform:scale(1.12);
+    }
+
+    .carousel-empty{
+      padding:14px 16px;
+      color:#555;
+      font-size:0.95rem;
+    }
+
     /* MAIN */
     main{
       max-width: 980px;
-      margin: 26px auto 40px;
+      margin: 14px auto 40px;
       padding: 0 16px 40px;
     }
-
-    .btn-volver{
-      display:inline-block;
-      margin-bottom:16px;
-      padding:6px 10px;
-      border-radius:6px;
-      background:#d60000;
-      color:#fff;
-      font-size:0.9rem;
-      font-weight:600;
-      text-decoration:none;
-      transition: background 0.15s;
-    }
-    .btn-volver:hover{ background:#b40000; }
 
     .page-title{
       margin: 0 0 6px;
@@ -254,87 +379,6 @@
       color:#222;
       line-height: 1.28rem;
     }
-
-    /* FOOTER (nuevo) */
-    footer{
-      background:#222;
-      color:#f2f2f2;
-      padding:18px 20px 10px;
-      border-top:3px solid #d60000;
-      font-size:0.85rem;
-      margin-top: 10px;
-    }
-
-    .footer-inner{
-      max-width:1300px;
-      margin:0 auto;
-      display:grid;
-      grid-template-columns: 1.35fr 1fr 1fr;
-      gap:16px;
-    }
-    @media (max-width: 900px){
-      .footer-inner{ grid-template-columns: 1fr; }
-    }
-
-    .footer-col h3{
-      margin:0 0 6px;
-      font-size:0.95rem;
-      text-transform:uppercase;
-      letter-spacing:0.03em;
-      color:#fff;
-    }
-    .footer-col p{
-      margin:0 0 6px;
-      font-size:0.82rem;
-      color:#e0e0e0;
-      line-height:1.25rem;
-    }
-    .footer-col a{
-      color:#ffdddd;
-      text-decoration:none;
-      font-size:0.82rem;
-    }
-    .footer-col a:hover{ text-decoration:underline; }
-
-    .footer-phones{
-      margin:0;
-      padding-left: 18px;
-      color:#e0e0e0;
-      font-size:0.82rem;
-      line-height:1.25rem;
-    }
-    .footer-phones li{ margin: 2px 0; }
-
-    .footer-bottom{
-      max-width:1300px;
-      margin:10px auto 0;
-      border-top:1px solid #444;
-      padding-top:6px;
-      display:flex;
-      justify-content:space-between;
-      align-items:center;
-      gap:8px;
-      flex-wrap:wrap;
-    }
-
-    .footer-bottom-left{
-      display:flex;
-      align-items:center;
-      gap:6px;
-      font-size:0.78rem;
-      color:#e0e0e0;
-    }
-    .footer-bottom-left img{ height:18px; }
-
-    .footer-bottom-right{
-      font-size:0.78rem;
-      color:#bbbbbb;
-      text-align:right;
-    }
-    @media (max-width: 600px){
-      .footer-bottom{ flex-direction:column; align-items:flex-start; }
-      .footer-bottom-right{ text-align:left; }
-    }
   </style>
 </head>
 
@@ -342,7 +386,7 @@
 
 <header>
   <div style="display:flex; align-items:center; gap:16px;">
-    <img src="img/feccooex.png" alt="FECCOOEx">
+    <img src="/img/feccooex.png" alt="FECCOOEx">
     <div class="titles">
       <h1>Herramientas FECCOOEx</h1>
       <p>Recursos públicos y sindicales para la comunidad educativa</p>
@@ -350,13 +394,27 @@
   </div>
 
   <nav>
-    <a href="delegados.html">Área delegados/as</a>
+    <a href="/delegados.html">Área delegados/as</a>
   </nav>
 </header>
 
-<main>
-  <a class="btn-volver" href="index.html">Volver a la portada</a>
+<!-- Volver -->
+<div class="back-wrap">
+  <a class="back-home" href="/index.html">Volver a la portada</a>
+</div>
 
+<!-- Carrusel -->
+<div class="campaign-wrap">
+  <div class="carousel" id="campaignCarousel" aria-label="Campañas">
+    <div class="carousel-empty" id="carouselEmpty">Cargando campañas…</div>
+    <button class="carousel-btn prev" id="carouselPrev" aria-label="Anterior" style="display:none;">‹</button>
+    <button class="carousel-btn next" id="carouselNext" aria-label="Siguiente" style="display:none;">›</button>
+    <div class="carousel-track" id="carouselTrack" style="display:none;"></div>
+    <div class="dots" id="carouselDots" style="display:none;"></div>
+  </div>
+</div>
+
+<main>
   <h1 class="page-title">Chat público</h1>
   <p class="page-subtitle">
     Espacio abierto para consultas breves (públicas) y orientación general.
@@ -367,7 +425,7 @@
     <strong>Importante:</strong> este chat es <strong>público</strong>. Evita datos personales (DNI, teléfono, direcciones, datos de salud, etc.).
     Las respuestas <strong>no son inmediatas</strong> y dependen de disponibilidad.
     Si tu consulta es <strong>urgente</strong> o requiere <strong>privacidad</strong>, utiliza
-    <a href="consultas.html">Consultas sindicales</a>.
+    <a href="/consultas.html">Consultas sindicales</a>.
     <ul class="rules">
       <li>Consulta breve y con contexto (centro/etapa/jornada) sin identificar personas.</li>
       <li>No se permite lenguaje ofensivo, difusión de datos personales ni contenidos discriminatorios.</li>
@@ -405,60 +463,171 @@
   </section>
 </main>
 
-<footer>
-  <div class="footer-inner">
-    <div class="footer-col">
-      <h3>Contacto</h3>
-      <p>
-        <strong>Dirección:</strong><br>
-        Avenida Juan Carlos I, núm. 47<br>
-        CP 06800 · Mérida (Extremadura)
-      </p>
-      <p>
-        <strong>Correo:</strong>
-        <a href="mailto:educacion@extremadura.ccoo.es">educacion@extremadura.ccoo.es</a>
-      </p>
-    </div>
+<!-- FOOTER CENTRAL -->
+<div id="site-footer"></div>
+<script src="/assets/footer.js?v=1"></script>
 
-    <div class="footer-col">
-      <h3>Teléfonos por sede</h3>
-      <ul class="footer-phones">
-        <li><strong>Badajoz:</strong> 924224104</li>
-        <li><strong>Cáceres:</strong> 927223534</li>
-        <li><strong>Mérida:</strong> 924330018</li>
-        <li><strong>Plasencia:</strong> 927424086</li>
-        <li><strong>Don Benito:</strong> 924802080</li>
-        <li><strong>Zafra:</strong> 924553202</li>
-      </ul>
-    </div>
-
-    <div class="footer-col">
-      <h3>Enlaces rápidos</h3>
-      <p><a href="https://extremadura.fe.ccoo.es/" target="_blank" rel="noopener">Web FECCOOExtremadura</a></p>
-      <p><a href="https://www.facebook.com/feccooex" target="_blank" rel="noopener">Facebook FECCOOEx</a></p>
-      <p><a href="https://x.com/FECCOOex" target="_blank" rel="noopener">X (Twitter) FECCOOEx</a></p>
-      <p><a href="https://www.instagram.com/feccooex" target="_blank" rel="noopener">Instagram FECCOOEx</a></p>
-      <p><a href="https://t.me/feccooextremadura" target="_blank" rel="noopener">Canal de Telegram FECCOOExtremadura</a></p>
-    </div>
-  </div>
-
-  <div class="footer-bottom">
-    <div class="footer-bottom-left">
-      <img src="https://licensebuttons.net/l/by-nd/4.0/88x31.png" alt="Licencia CC BY-ND">
-      <span>Contenido bajo licencia Creative Commons BY-ND 4.0 (se permite compartir sin modificaciones y con atribución).</span>
-    </div>
-    <div class="footer-bottom-right">
-      © <span id="anio-footer"></span> Federación de Enseñanza de CCOO de Extremadura
-    </div>
-  </div>
-
-  <script>
-    document.getElementById('anio-footer').textContent = new Date().getFullYear();
-  </script>
-</footer>
-
-<!-- Firebase (tu config REAL ya está pegada) -->
+<!-- Firebase (tu config REAL ya está pegada) + lógica de chat -->
 <script type="module">
+  /***********************
+   * 1) CARRUSEL UNIVERSAL
+   ***********************/
+  (function initCarousel(){
+    const BANNERS_CSV = "/banners.csv";
+
+    const elEmpty = document.getElementById("carouselEmpty");
+    const elTrack = document.getElementById("carouselTrack");
+    const elDots  = document.getElementById("carouselDots");
+    const btnPrev = document.getElementById("carouselPrev");
+    const btnNext = document.getElementById("carouselNext");
+    const elCarousel = document.getElementById("campaignCarousel");
+
+    if (!elEmpty || !elTrack || !elDots || !btnPrev || !btnNext || !elCarousel) return;
+
+    let slides = [];
+    let index = 0;
+    let timer = null;
+    const AUTO_MS = 5500;
+
+    function splitCSVLine(line){
+      const out = [];
+      let cur = "";
+      let inQ = false;
+      for (let i=0; i<line.length; i++){
+        const ch = line[i];
+        if (ch === '"' && inQ && line[i+1] === '"'){ cur += '"'; i++; continue; }
+        if (ch === '"'){ inQ = !inQ; continue; }
+        if (ch === "," && !inQ){ out.push(cur); cur=""; continue; }
+        cur += ch;
+      }
+      out.push(cur);
+      return out;
+    }
+    function parseCSV(text){
+      const lines = text.replace(/\r/g, "").split("\n").filter(l => l.trim() !== "");
+      if (!lines.length) return [];
+      const headers = splitCSVLine(lines[0]).map(h => h.trim());
+      return lines.slice(1).map(line => {
+        const cols = splitCSVLine(line);
+        const obj = {};
+        headers.forEach((h,i) => obj[h] = (cols[i] ?? "").trim());
+        return obj;
+      });
+    }
+    function normBool(v){
+      return ["1","true","si","sí","x","ok"].includes((v||"").toLowerCase().trim());
+    }
+
+    function apply(){
+      elTrack.style.transform = `translateX(${-index * 100}%)`;
+      [...elDots.children].forEach((d, i) => d.classList.toggle("active", i === index));
+    }
+    function goTo(i, userAction=false){
+      index = (i + slides.length) % slides.length;
+      apply();
+      if (userAction) restartAuto();
+    }
+    function next(user=false){ goTo(index + 1, user); }
+    function prev(user=false){ goTo(index - 1, user); }
+
+    function startAuto(){
+      stopAuto();
+      timer = setInterval(() => next(false), AUTO_MS);
+    }
+    function stopAuto(){
+      if (timer) { clearInterval(timer); timer = null; }
+    }
+    function restartAuto(){
+      stopAuto();
+      startAuto();
+    }
+
+    function buildCarousel(items){
+      slides = items;
+      elTrack.innerHTML = "";
+      elDots.innerHTML = "";
+
+      slides.forEach((s, i) => {
+        const slide = document.createElement("div");
+        slide.className = "slide";
+
+        const imgSrc = s.imagen;
+        const alt = s.alt || "Campaña FECCOOEx";
+        const href = (s.enlace || "").trim();
+
+        const img = `<img src="${imgSrc}" alt="${alt}" loading="lazy">`;
+        slide.innerHTML = href ? `<a href="${href}" aria-label="${alt}">${img}</a>` : img;
+
+        elTrack.appendChild(slide);
+
+        const dot = document.createElement("button");
+        dot.className = "dot" + (i === 0 ? " active" : "");
+        dot.setAttribute("aria-label", "Ir a campaña " + (i+1));
+        dot.addEventListener("click", () => goTo(i, true));
+        elDots.appendChild(dot);
+      });
+
+      const multi = slides.length > 1;
+      elEmpty.style.display = "none";
+      elTrack.style.display = "flex";
+      elDots.style.display = multi ? "flex" : "none";
+      btnPrev.style.display = multi ? "flex" : "none";
+      btnNext.style.display = multi ? "flex" : "none";
+
+      index = 0;
+      apply();
+      if (multi) startAuto();
+    }
+
+    elCarousel.addEventListener("mouseenter", stopAuto);
+    elCarousel.addEventListener("mouseleave", () => { if (slides.length > 1) startAuto(); });
+
+    btnNext.addEventListener("click", () => next(true));
+    btnPrev.addEventListener("click", () => prev(true));
+
+    let touchX = null;
+    elCarousel.addEventListener("touchstart", (e) => {
+      if (!e.touches || e.touches.length !== 1) return;
+      touchX = e.touches[0].clientX;
+      stopAuto();
+    }, {passive:true});
+
+    elCarousel.addEventListener("touchend", (e) => {
+      if (touchX === null) return;
+      const endX = (e.changedTouches && e.changedTouches[0]) ? e.changedTouches[0].clientX : touchX;
+      const dx = endX - touchX;
+      touchX = null;
+
+      if (Math.abs(dx) > 40){
+        dx < 0 ? next(true) : prev(true);
+      } else {
+        restartAuto();
+      }
+    }, {passive:true});
+
+    fetch(BANNERS_CSV + "?v=" + Date.now())
+      .then(r => { if (!r.ok) throw new Error("No se pudo cargar banners.csv"); return r.text(); })
+      .then(text => {
+        const rows = parseCSV(text);
+        const items = rows
+          .filter(r => normBool(r.activo))
+          .sort((a,b) => (parseInt(a.orden||"999",10) - parseInt(b.orden||"999",10)));
+
+        if (!items.length){
+          elEmpty.textContent = "No hay campañas activas.";
+          return;
+        }
+        buildCarousel(items);
+      })
+      .catch(err => {
+        console.error(err);
+        elEmpty.textContent = "No se ha podido cargar el banner de campañas.";
+      });
+  })();
+
+  /***********************
+   * 2) CHAT (tu lógica original)
+   ***********************/
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.6.0/firebase-app.js";
   import {
     getFirestore, collection, addDoc, serverTimestamp,
@@ -487,7 +656,9 @@
   function formatTime(ts) {
     if (!ts) return "";
     const d = ts.toDate ? ts.toDate() : new Date(ts);
-    return d.toLocaleString("es-ES", { day:"2-digit", month:"2-digit", year:"numeric", hour:"2-digit", minute:"2-digit" });
+    return d.toLocaleString("es-ES", {
+      day:"2-digit", month:"2-digit", year:"numeric", hour:"2-digit", minute:"2-digit"
+    });
   }
 
   function renderMessages(docs) {
